# xnat

./: .gitignore  c.get(fldr,extract=True)  constraints.txt  pyproject.toml  requirements.txt  setup.py
samples/: ct_session.xml  project.xml  subject.xml
tests/: test_helpers.py
xnat/: cli.py  code_mapping  files.json  files.json-1  firefox.html  helpers.py  j.html  j.json  lidc.py  object_oriented.py  requirements.txt  rest.sh  rough.py  shell_examples  snippets.py  tmp.txt  totalseg.py  xapi_scripts.py
xnat/cpp/: CMakeLists.txt  CMakePresets.json  main.py
xnat/cpp/src/: dcm2nii.cxx  main.cpp
